--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+body {
+  background: rgba(34,34, 34);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.calc {
+width: 320px;
+margin: 100px auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#answer{
+  background-color: #000000;
+  padding: 10px;
+  font-size: 35px;
+  width: 295px;
+  height: 46px;
+  text-align: right;
+  border: 1px solid #eee;
+  color: #eee;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.button::placeholder{
+color: #eee;
 }
 
-.App-link {
-  color: #61dafb;
+.button {
+  background-color: #000000;
+ height: 80px;
+ width: 80px;
+ color: white;
+ font-size: 30px;
+ border: 1px solid #eee;
+ float: left;
+ cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button1 {
+  width: 160px;
+  background-color: gray;
+  height: 88px;
+  color: #eee;
+  font-size: 30px;
+  border: 1px solid #eee;
 }
+
